tests/neg/i21071.check
-- [E051] Reference Error: tests/neg/i21071.scala:9:2 ------------------------------------------------------------------
9 |  foo { // error
  |  ^^^
  |  Ambiguous overload. The overloaded alternatives of method foo in object MySuite with types
  |   (a: String): Nothing
  |   (a: List[String]): Nothing
  |  both match arguments ((??? : => Nothing))
  |
  | longer explanation available when compiling with `-explain`
